--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
                             原始文件地址：<el-input v-model="dataForm.srcFilePath" placeholder="请输入原始文件地址" style="width: 800px;" @change="onChangeSrcFilePath"></el-input>
                         </el-row>
                         <el-row :gutter="20" style="margin-bottom: 10px;">
-                            目标文件地址：<el-input v-model="dataForm.descFilePath" placeholder="请输入目标文件地址" style="width: 800px;"></el-input>
+                            目标文件地址：<el-input v-model="dataForm.destFilePath" placeholder="请输入目标文件地址" style="width: 800px;"></el-input>
                         </el-row>
                         <el-row :gutter="20" style="margin-bottom: 10px;">
                             <el-button size="mini" @click="onAddTime">添加时间范围</el-button>
@@ -53,7 +53,18 @@
                         </el-row>
                     </el-tab-pane>
                     <el-tab-pane label="音频转视频" name="audioToVideo">
-                        <div style="align-content: center"><h5>敬请期待</h5></div>
+                        <el-row :gutter="20" style="margin-bottom: 10px;">
+                            原始文件名称：<el-input v-model="dataForm2.srcFileName" placeholder="请输入原始文件名称" style="width: 800px;"></el-input>
+                        </el-row>
+                        <el-row :gutter="20" style="margin-bottom: 10px;">
+                            原始文件地址：<el-input v-model="dataForm2.srcFilePath" placeholder="请输入原始文件地址" style="width: 800px;" @change="onChangeSrcFilePath2"></el-input>
+                        </el-row>
+                        <el-row :gutter="20" style="margin-bottom: 10px;">
+                            目标文件地址：<el-input v-model="dataForm2.destFilePath" placeholder="请输入目标文件地址" style="width: 800px;"></el-input>
+                        </el-row>
+                        <el-row :gutter="20" style="margin-bottom: 10px;">
+                            <el-button size="mini" @click="onConvert" type="primary">转换</el-button>
+                        </el-row>
                     </el-tab-pane>
                 </el-tabs>
             </el-col>
@@ -76,17 +87,22 @@
             temp: {
                 activeName: 'splice'
             },
+            dataForm2: {
+                srcFileName: null,
+                srcFilePath: null,
+                destFilePath: null
+            },
             dataForm: {
                 srcFileName: null,
                 srcFilePath: null,
-                descFilePath: null,
+                destFilePath: null,
                 timeArrList: [
                 ]
             }
         }
     },
     methods: {
-        handleClick(tab, event) {
+        handleClick: function(tab, event) {
             console.log(tab, event);
         },
         onAddTime: function() {
@@ -94,9 +110,52 @@
             this.dataForm.timeArrList.push(obj);
         },
         onChangeSrcFilePath: function() {
-            if(this.dataForm.descFilePath === '' || this.dataForm.descFilePath == null) {
-                this.dataForm.descFilePath = this.dataForm.srcFilePath;
+            if(this.dataForm.destFilePath === '' || this.dataForm.destFilePath == null) {
+                this.dataForm.destFilePath = this.dataForm.srcFilePath;
             }
+        },
+        onChangeSrcFilePath2: function () {
+            if(this.dataForm2.destFilePath === '' || this.dataForm2.destFilePath == null) {
+                this.dataForm2.destFilePath = this.dataForm2.srcFilePath;
+            }
+        },
+        onConvert: function() {
+            if(this.dataForm2.srcFileName === '' || this.dataForm2.srcFileName == null) {
+                this.$message({
+                    message: '请输入原始文件名称',
+                    type: 'warning'
+                });
+                return;
+            }
+            if(this.dataForm2.srcFilePath === '' || this.dataForm2.srcFilePath == null) {
+                this.$message({
+                    message: '请输入原始文件地址',
+                    type: 'warning'
+                });
+                return;
+            }
+            if(this.dataForm2.destFilePath === '' || this.dataForm2.destFilePath == null) {
+                this.$message({
+                    message: '请输入目标文件地址',
+                    type: 'warning'
+                });
+                return;
+            }
+            axios.post('/videoToAudio', this.dataForm2)
+                .then(response => {
+                    if(response.data.code === 0) {
+                        this.$message({
+                            message: response.data.msg,
+                            type: 'success'
+                        });
+                    } else {
+                        this.$message.error(response.data.msg);
+                    }
+                })
+                .catch(error => {
+                    this.$message.error(error);
+                    console.log(error);
+                });
         },
         onSplice: function() {
             if(this.dataForm.srcFileName === '' || this.dataForm.srcFileName == null) {
@@ -113,7 +172,7 @@
                 });
                 return;
             }
-            if(this.dataForm.descFilePath === '' || this.dataForm.descFilePath == null) {
+            if(this.dataForm.destFilePath === '' || this.dataForm.destFilePath == null) {
                 this.$message({
                     message: '请输入目标文件地址',
                     type: 'warning'
@@ -128,7 +187,7 @@
                 return;
             }
 
-            axios.post('http://127.0.0.1:8083/parse', this.dataForm)
+            axios.post('/parse', this.dataForm)
             .then(response => {
                 if(response.data.code === 0) {
                     this.$message({
