--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -86,6 +86,9 @@
                             </el-row>
                         </template>
                     </el-tab-pane>
+                    <el-row :gutter="20" style="margin-bottom: 10px;">
+                        <p style="font-size: 12px;"><el-link :underline="false" type="primary" href="https://woodwhales.cn" target="_blank">woodwhales.cn</el-link></p>
+                    </el-row>
                 </el-tabs>
             </el-col>
             <el-col :span="2">
